fix responsivenes on smaller device iphone 5

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -80,3 +80,13 @@
     font-size: 2rem;
   }
 }
+
+@media (max-height: 568px) {
+  p {
+    font-size: 0.8rem;
+  }
+
+  .showcase-content {
+    font-size: 0.7rem;
+  }
+}
